Added more languages

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -33,5 +33,9 @@
   "languageJapanese": "Japanese",
   "@languageJapanese": {},
   "languageFrench": "French",
-  "@languageFrench": {}
+  "@languageFrench": {},
+  "languageChinese": "Chinese",
+  "@languageChinese": {},
+  "languageKorean": "Korean",
+  "@languageKorean": {}
 }
