feat: add watering schedule configuration

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,6 +12,33 @@
   "batteryLevel": "Battery Level",
   "@batteryLevel": {},
 
+  "addSchedule": "Add Schedule",
+  "@addSchedule": {},
+  "scheduleConfig": "Schedule Configuration",
+  "@scheduleConfig": {},
+  "daily": "Daily",
+  "@daily": {},
+  "twoDays": "Every 2 Days",
+  "@twoDays": {},
+  "threeDays": "Every 3 Days",
+  "@threeDays": {},
+  "weekly": "Weekly",
+  "@weekly": {},
+  "monthly": "Monthly",
+  "@monthly": {},
+  "seconds": "Seconds",
+  "@seconds": {},
+  "secondsAbbrev": "s",
+  "@secondsAbbrev": {},
+  "time": "Time: ",
+  "@time": {},
+  "frequency": "Frequency: ",
+  "@frequency": {},
+  "duration": "Duration: ",
+  "@duration": {},
+  "saveSchedule": "Save Schedule",
+  "@saveSchedule": {},
+
   "notificationsTitle": "Notifications",
   "@notificationsTitle": {},
   "noNotifications": "No notifications yet!",
