--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -12,12 +12,39 @@
   "batteryLevel": "Nivel de Batería",
   "@batteryLevel": {},
 
+  "addSchedule": "Agregar Horario",
+  "@addSchedule": {},
+  "scheduleConfig": "Configuración de Horario",
+  "@scheduleConfig": {},
+  "daily": "Diario",
+  "@daily": {},
+  "twoDays": "Cada 2 Días",
+  "@twoDays": {},
+  "threeDays": "Cada 3 Días",
+  "@threeDays": {},
+  "weekly": "Semanal",
+  "@weekly": {},
+  "monthly": "Mensual",
+  "@monthly": {},
+  "seconds": "Segundos",
+  "@seconds": {},
+  "secondsAbbrev": "s",
+  "@secondsAbbrev": {},
+  "time": "Hora: ",
+  "@time": {},
+  "frequency": "Frecuencia: ",
+  "@frequency": {},
+  "duration": "Duración: ",
+  "@duration": {},
+  "saveSchedule": "Guardar Horario",
+  "@saveSchedule": {},
+
   "notificationsTitle": "Notificaciones",
   "@notificationsTitle": {},
   "noNotifications": "¡Aún no hay notificaciones!",
   "@noNotifications": {},
 
-  "settingsTitle": "Configuración",
+  "settingsTitle": "Configuraciones",
   "@settingsTitle": {},
   "lightDarkMode": "Modo Claro/Oscuro",
   "@lightDarkMode": {},
