--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -12,6 +12,33 @@
   "batteryLevel": "Niveau de Batterie",
   "@batteryLevel": {},
 
+  "addSchedule": "Ajouter un Horaire",
+  "@addSchedule": {},
+  "scheduleConfig": "Configuration de l'Agenda",
+  "@scheduleConfig": {},
+  "daily": "Quotidien",
+  "@daily": {},
+  "twoDays": "Tous les 2 Jours",
+  "@twoDays": {},
+  "threeDays": "Tous les 3 Jours",
+  "@threeDays": {},
+  "weekly": "Hebdomadaire",
+  "@weekly": {},
+  "monthly": "Mensuel",
+  "@monthly": {},
+  "seconds": "Secondes",
+  "@seconds": {},
+  "secondsAbbrev": "s",
+  "@secondsAbbrev": {},
+  "time": "Heure : ",
+  "@time": {},
+  "frequency": "Fréquence : ",
+  "@frequency": {},
+  "duration": "Durée : ",
+  "@duration": {},
+  "saveSchedule": "Enregistrer l'Agenda",
+  "@saveSchedule": {},
+
   "notificationsTitle": "Notifications",
   "@notificationsTitle": {},
   "noNotifications": "Pas encore de notifications !",
