--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -5,12 +5,39 @@
 
   "wateringButtonText": "植物に水をやる",
   "@wateringButtonText": {},
-  "wateringPlants": "植物に水やり中...",
+  "wateringPlants": "植物に水をやっています...",
   "@wateringPlants": {},
   "humidityLevel": "湿度レベル",
   "@humidityLevel": {},
   "batteryLevel": "バッテリーレベル",
   "@batteryLevel": {},
+
+  "addSchedule": "スケジュールを追加",
+  "@addSchedule": {},
+  "scheduleConfig": "スケジュール設定",
+  "@scheduleConfig": {},
+  "daily": "毎日",
+  "@daily": {},
+  "twoDays": "2日ごと",
+  "@twoDays": {},
+  "threeDays": "3日ごと",
+  "@threeDays": {},
+  "weekly": "毎週",
+  "@weekly": {},
+  "monthly": "毎月",
+  "@monthly": {},
+  "seconds": "秒",
+  "@seconds": {},
+  "secondsAbbrev": "秒",
+  "@secondsAbbrev": {},
+  "time": "時間: ",
+  "@time": {},
+  "frequency": "頻度: ",
+  "@frequency": {},
+  "duration": "期間: ",
+  "@duration": {},
+  "saveSchedule": "スケジュールを保存",
+  "@saveSchedule": {},
 
   "notificationsTitle": "通知",
   "@notificationsTitle": {},
