--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -3,14 +3,41 @@
   "appTitle": "나의 정원",
   "@appTitle": {},
 
-  "wateringButtonText": "식물에 물 주기",
+  "wateringButtonText": "식물 물주기",
   "@wateringButtonText": {},
-  "wateringPlants": "식물에 물 주는 중...",
+  "wateringPlants": "식물에 물을 주는 중...",
   "@wateringPlants": {},
   "humidityLevel": "습도 수준",
   "@humidityLevel": {},
   "batteryLevel": "배터리 수준",
   "@batteryLevel": {},
+
+  "addSchedule": "일정 추가",
+  "@addSchedule": {},
+  "scheduleConfig": "일정 구성",
+  "@scheduleConfig": {},
+  "daily": "매일",
+  "@daily": {},
+  "twoDays": "2일마다",
+  "@twoDays": {},
+  "threeDays": "3일마다",
+  "@threeDays": {},
+  "weekly": "매주",
+  "@weekly": {},
+  "monthly": "매달",
+  "@monthly": {},
+  "seconds": "초",
+  "@seconds": {},
+  "secondsAbbrev": "초",
+  "@secondsAbbrev": {},
+  "time": "시간: ",
+  "@time": {},
+  "frequency": "빈도: ",
+  "@frequency": {},
+  "duration": "지속 시간: ",
+  "@duration": {},
+  "saveSchedule": "일정 저장",
+  "@saveSchedule": {},
 
   "notificationsTitle": "알림",
   "@notificationsTitle": {},
@@ -19,7 +46,7 @@
 
   "settingsTitle": "설정",
   "@settingsTitle": {},
-  "lightDarkMode": "밝은/어두운 모드",
+  "lightDarkMode": "라이트/다크 모드",
   "@lightDarkMode": {},
   "language": "언어",
   "@language": {},
