--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -5,12 +5,39 @@
 
   "wateringButtonText": "浇水植物",
   "@wateringButtonText": {},
-  "wateringPlants": "正在给植物浇水...",
+  "wateringPlants": "正在浇水植物...",
   "@wateringPlants": {},
-  "humidityLevel": "湿度等级",
+  "humidityLevel": "湿度水平",
   "@humidityLevel": {},
   "batteryLevel": "电池电量",
   "@batteryLevel": {},
+
+  "addSchedule": "添加计划",
+  "@addSchedule": {},
+  "scheduleConfig": "计划设置",
+  "@scheduleConfig": {},
+  "daily": "每天",
+  "@daily": {},
+  "twoDays": "每两天",
+  "@twoDays": {},
+  "threeDays": "每三天",
+  "@threeDays": {},
+  "weekly": "每周",
+  "@weekly": {},
+  "monthly": "每月",
+  "@monthly": {},
+  "seconds": "秒",
+  "@seconds": {},
+  "secondsAbbrev": "秒",
+  "@secondsAbbrev": {},
+  "time": "时间：",
+  "@time": {},
+  "frequency": "频率：",
+  "@frequency": {},
+  "duration": "时长：",
+  "@duration": {},
+  "saveSchedule": "保存计划",
+  "@saveSchedule": {},
 
   "notificationsTitle": "通知",
   "@notificationsTitle": {},
@@ -19,7 +46,7 @@
 
   "settingsTitle": "设置",
   "@settingsTitle": {},
-  "lightDarkMode": "亮/暗模式",
+  "lightDarkMode": "明暗模式",
   "@lightDarkMode": {},
   "language": "语言",
   "@language": {},
